# Proyecto_II_Client_CE2103-

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
Socket/: Client.cpp  (+2 more)
backend/: CMakeLists.txt  main.cpp
backend/API/: ServerConnection.h
backend/html/: _ball_8h_source.html  _bound_box_8h_source.html  _box_8h_source.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _field_8h_source.html  _game_8h_source.html  _game_settings_8h_source.html  _goal_line_box_8h_source.html  _json_8h_source.html  _linked_list_8h_source.html  _matrix_8h_source.html  _message_8h_source.html  _normal_box_8h_source.html  _obstacle_box_8h_source.html  _path_8h_source.html  _player_8h_source.html  _response_8h_source.html  _route_8h_source.html  _shoot_8h_source.html  allocators_8h_source.html  annotated.html  biginteger_8h_source.html  class_auto_u_t_f_input_stream-members.html  class_auto_u_t_f_input_stream.html  class_auto_u_t_f_output_stream-members.html  class_auto_u_t_f_output_stream.html  class_ball-members.html  class_ball.html  class_basic_i_stream_wrapper-members.html  class_basic_i_stream_wrapper.html  class_basic_o_stream_wrapper-members.html  class_basic_o_stream_wrapper.html  class_bound_box-members.html  class_bound_box.html  class_bound_box__inherit__graph.dot  class_box-members.html  class_box.html  class_box__inherit__graph.dot  class_box_aa99a925f1200a132afe6ce6b71456dae_icgraph.dot  (+351 more)
backend/soccar/: Ball.h  Field.h  Game.h  GameSettings.h  Path.h  Player.h  Route.h  Shoot.h
backend/util/: Json.h  Message.h  Response.h
(+114 files in other folders)
